metadata/tests/compile_fail/init_master_edition_without_behavior.stderr
error[E0277]: the trait bound `quasar_metadata::MasterEditionAccount: quasar_lang::prelude::Space` is not satisfied
  --> tests/compile_fail/init_master_edition_without_behavior.rs:17:25
   |
17 |     pub master_edition: Account<MasterEditionAccount>,
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `quasar_lang::prelude::Space` is not implemented for `quasar_metadata::MasterEditionAccount`
   |
   = help: the following other types implement trait `quasar_lang::prelude::Space`:
             InterfaceAccount<T>
             Migration<From, To>
             quasar_lang::accounts::Account<T>
   = note: required for `quasar_lang::accounts::Account<quasar_metadata::MasterEditionAccount>` to implement `quasar_lang::prelude::Space`

error[E0271]: type mismatch resolving `<Account<MasterEditionAccount> as AccountInit>::InitParams<'_> == ()`
  --> tests/compile_fail/init_master_edition_without_behavior.rs:17:25
   |
17 |     pub master_edition: Account<MasterEditionAccount>,
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `()`, found `MasterEditionInitParams<'_>`
   |
note: required by a bound in `quasar_lang::ops::init::Op::<'a, P>::apply`
  --> $WORKSPACE/lang/src/ops/init.rs
   |
   |     pub fn apply<F: AccountLoad + AccountInit<InitParams<'a> = P>>(
   |                                               ^^^^^^^^^^^^^^^^^^ required by this bound in `Op::<'a, P>::apply`

error[E0080]: evaluation panicked: field `master_edition` requires an init-param behavior (e.g., token(...) or mint(...))
 --> tests/compile_fail/init_master_edition_without_behavior.rs:8:10
  |
8 | #[derive(Accounts)]
  |          ^^^^^^^^ evaluation of `<BadInit as quasar_lang::traits::ParseAccountsUnchecked<'input>>::parse_with_instruction_data_unchecked::_` failed here
